--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Stripe.WebProjects/Default.WebProject/__backup.backup/
 Stripe.WebProjects/Default.WebProject/__deleted.deleted/
 *._a5wcmp_manifest
+Stripe.WebProjects/Default.WebProject/Stripe_Authentication.a5xbm
+Stripe.WebProjects/Default.WebProject/stripeAuthentication.js
